syntax="proto3";

service Gerenciar{
    rpc get(Empty) returns (ListarInfoFinanceiras){}
    rpc getById(InfoFinanceirasPorId) returns(ListarInfoFinanceiras){}
    rpc insert(InfoFinanceiras) returns(InfoFinanceiras){}
    rpc update(InfoFinanceiras) returns(InfoFinanceiras){}
    rpc delete(InfoFinanceirasPorId) returns(Empty){}
}
message Empty{}

message InfoFinanceiras{
    string _id = 1;
    string nome_banco = 2;
    string tipo_conta = 3;
    string nome_titular = 4;
    string limite_cartao = 5;
    string id_cliente = 6;
}

message ListarInfoFinanceiras{
    repeated InfoFinanceiras InfoFinanceiras = 1;
}

message InfoFinanceirasPorId{
    string id_cliente=1;
}